# alembic-squawk

./: .copier-answers.yml  CHANGELOG.md  README.md  commands.md  instructions.md  pyproject.toml  test_regex.py
.github/workflows/: build_and_publish.yml
alembic_squawk/: __init__.py  cli.py  version.py
tests/: test_cli.py  test_import.py  test_regex.py
tests/example_migration/: alembic.ini
tests/example_migration/migrations/: env.py
tests/example_migration/migrations/versions/: 1_rev1.py  2_rev2.py  3_rev3.py
