[project]
name = "alembic-squawk"
version = "0.2.1"
description = "Split Alembic migrations into per-revision SQL files for linting with Squawk."
keywords = ["alembic", "squawk", "sql-linter", "migration"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.3",
]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/alembic-squawk" }


# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
alembic-squawk = "alembic_squawk.cli:main"


[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.15.0",
    "coverage>=7.13.4",
    "pytest-cov>=7.0.0",
    "covdefaults>=2.3.0",
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.49",
]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html:tmp/htmlcov"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["alembic_squawk"]

[tool.coverage.report]
fail_under = 50
